# MOTCS

./: .gitignore  README.md  pyproject.toml
configs/: rodriguez_baseline_linear_chirp.yaml  rodriguez_static_3.yaml  rodriguez_static_3_plus_1.yaml
docs/: mgf-backend-source-survey.md  mgf-exact-backend-extension-plan.md  mgf-hamiltonian-requirements.md  mgf-hamiltonian-validation.md  policy-force-snapshots.md  policy-interface.md  project-tracks.md  pylcp-xfmolecules-interface-notes.md  rodriguez-parameter-sheet.md
notebooks/: pylcp_conventions_sanity_check.ipynb
outputs/provisional/: PROVISIONAL_NOT_RODRIGUEZ_REPLICATION_POLICY_FORCE_SNAPSHOT_ONLY_rodriguez_baseline_linear_chirp_t_0p0005s_grid.npz  PROVISIONAL_NOT_RODRIGUEZ_REPLICATION_POLICY_FORCE_SNAPSHOT_ONLY_rodriguez_baseline_linear_chirp_t_0p0005s_metadata.json  PROVISIONAL_NOT_RODRIGUEZ_REPLICATION_POLICY_FORCE_SNAPSHOT_ONLY_rodriguez_baseline_linear_chirp_t_0p001s_grid.npz  PROVISIONAL_NOT_RODRIGUEZ_REPLICATION_POLICY_FORCE_SNAPSHOT_ONLY_rodriguez_baseline_linear_chirp_t_0p001s_metadata.json  PROVISIONAL_NOT_RODRIGUEZ_REPLICATION_run_001.md  (+20 more)
scripts/: inspect_policies.py  run_provisional_policy_force_snapshots.py  run_provisional_reversal_diagnostics.py  run_provisional_static_force_plumbing.py  validate_mgf_hamiltonian.py
tests/: test_configs.py  test_constants.py  test_geometry.py  test_mgf_backend.py  test_policies.py  test_policy_force_snapshots.py  test_provisional_force.py  test_provisional_reversal_diagnostics.py  test_provisional_run_script.py  test_spectroscopy.py  test_units.py
(+10 files in other folders)
