[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mgf-mot-force-map"
version = "0.1.0"
description = "Static MgF MOT force-map replication scaffold"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
notebook = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pylcp==1.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
